--- a/index.html
+++ b/index.html
@@ -298,10 +298,19 @@
             <p>Geothermal energy harnesses heat primarily from the ground or areas that absorb substantial heat from the sun. If we don’t transition to renewable energy like geothermal, fossil fuels may be depleted within about 50 years. So, what can we do? We can utilize energy sources that do not rely on fossil fuels! These include geothermal, solar, biomass, wind, and hydropower. Today, I will focus on geothermal energy. While various forms of energy are labeled as “renewable,” not all are sustainable or environmentally friendly. Many regions worldwide view geothermal energy as an affordable and sustainable solution, potentially reducing dependence on fossil fuels, combating global warming, and mitigating public health risks associated with fossil fuels. Geothermal energy facilities can generate 68 billion kilowatt-hours of electricity and are increasingly adopted worldwide, with more than 25% of Iceland and El Salvador's electricity produced from geothermal sources.</p>
         </ul>
     </section>
+
     <section id="contact">
         <h2>Contact Us</h2>
         <p>Email: <a href="mailto:teum2032@chadwickschool.org">Email us</a></p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h2>Our sources</h2>
+        <p>Email: <a href="https://ace-pypx.github.io/Renewable-energy/Sources.html">Our sources</a></p>
     </section>
+  
+
     <footer>
         <p>&copy; 2025 ACE PYPX GROUP. All rights reserved.</p>
     </footer>
