--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             </ul>
         </nav>
         <h1>Renewable Energy Solutions</h1>
+        <img src="Renewable energy infographic 2.png" alt="Renewable Energy Infographic" width="100" height="100" style="position: absolute; top: 10px; left: 10px;">
     </header>
     <section id="home">
         <h2>Welcome to Renewable Energy<img src="https://cdn3.emoji.gg/emojis/8763-lightning-bolt.png" alt="lightning" width="50" height="50" style="float:position: relative;"> </h2> 
@@ -302,12 +303,10 @@
     <section id="contact">
         <h2>Contact Us</h2>
         <p>Email: <a href="mailto:teum2032@chadwickschool.org">Email us</a></p>
-        <br>
-        <br>
-        <br>
-        <br>
+    </section>
+    <section id="sources">
         <h2>Our sources</h2>
-        <p>Email: <a href="https://ace-pypx.github.io/Renewable-energy/Sources.html">Our sources</a></p>
+        <p>sources: <a href="https://ace-pypx.github.io/Renewable-energy/Source.html">Our sources</a></p>
     </section>
   
 
